# aoc

./: .gitattributes  .gitignore  README.md
2020/1.2/: 1.2.cpp
2020/2.2/: 2.2.cpp
2020/cpp/3.2/: main.cpp
2020/cpp/4.1/: main.cpp
2020/ocaml/: .gitignore
2020/ocaml/q10_1/: dune  q10_1.ml
2020/ocaml/q10_2/: dune
2020/ocaml/q14_1/: dune
2020/ocaml/q14_2/: dune
2020/ocaml/q15_1/: dune  q15_1.ml
2020/ocaml/q15_2/: q15_2.ml
2020/ocaml/q16_1/: q16_1.ml
2020/ocaml/q16_2/: dune  q16_2.ml
2020/ocaml/q17_1/: q17_1.ml
2020/ocaml/q17_2/: dune  q17_2.ml
2020/ocaml/q18_1/: dune  q18_1.ml
2020/ocaml/q18_2/: dune  q18_2.ml
2020/ocaml/q19_1/: dune  q19_1.ml
2020/ocaml/q1_1/: dune  q1_1.ml
2020/ocaml/q1_2/: q1_2.ml
2020/ocaml/q20_1/: dune  q20_1.ml
2020/ocaml/q20_2/: d4.ml  q20_2.ml  q20_2_old.ml
2020/ocaml/q2_1/: dune  q2_1.ml
2020/ocaml/q2_2/: dune  q2_2.ml
2020/ocaml/q3_2/: dune
2020/ocaml/q4_1/: dune  q4_1.ml
2020/ocaml/q4_2/: dune  q4_2.ml
2020/ocaml/q5_1/: dune  q5_1.ml
2020/ocaml/q5_2/: dune
2020/ocaml/q6_1/: dune  q6_1.ml
2020/ocaml/q6_2/: dune  q6_2.ml
2020/ocaml/q7_1/: q7_1.ml
2020/ocaml/q7_2/: dune  q7_2.ml
2020/ocaml/q8_1/: dune  q8_1.ml
2020/ocaml/q8_2/: dune  q8_2.ml
2020/ocaml/q9_1/: dune
2020/ocaml/q9_2/: dune
2021/1.2/: increases.cpp
2021/10.1/: main.cpp
2021/11.1/: main.cpp
2021/12.1/: main.cpp
2021/12.2/: main.cpp
2021/14.1/: main.cpp
2021/16.2/: main.cpp
2021/17.2/: main.cpp
2021/18.1/: snailfish.h
2021/18.2/: main.cpp
2021/19.1/: main.cpp
2021/20.1/: main.cpp
2021/21.2/: main.cpp
2021/22.2/: main.cpp
2021/23.1/: main.cpp
2021/23.2/: main.cpp
2021/24.1/: main.cpp
2021/3.1/: main.cpp
2021/4.1/: main.cpp
2021/5.1/: main.cpp
2021/7.2/: main.cpp
2021/cpp/1.1/: increases.cpp
2021/cpp/10.2/: main.cpp
2021/cpp/11.2/: main.cpp
2021/cpp/12.2/: main.cpp
2021/cpp/14.2/: main.cpp
2021/cpp/15.1/: main.cpp
2021/cpp/15.2/: main.cpp
2021/cpp/16.2/: hex_to_bin.h
2021/cpp/17.1/: main.cpp
2021/cpp/18.1/: main.cpp
2021/cpp/19.2/: main.cpp
2021/cpp/2.1/: 2.1.cpp
2021/cpp/2.2/: 2.2.cpp
2021/cpp/20.2/: main.cpp
2021/cpp/21.1/: main.cpp
2021/cpp/21.2/: main.cpp
2021/cpp/23.2/: main.cpp
2021/cpp/24.2/: main.cpp
2021/cpp/25.1/: main.cpp
2021/cpp/4.2/: main.cpp
2021/cpp/5.2/: main.cpp
2021/cpp/6.1/: main.cpp
2021/cpp/7.1/: main.cpp
2021/cpp/8.2/: main_redux.cpp
2021/cpp/9.1/: main.cpp
2021/cpp/9.2/: main.cpp
2022/cpp/10.2/: main.cpp
2022/cpp/2.2/: main.cpp
2022/cpp/25.1/: main.cpp
2022/cpp/4.1/: main.cpp
2022/cpp/4.2/: main.cpp
2022/cpp/8.2/: main.cpp
cxx/: CMakeLists.txt  README.md  conandata.yml  environment.yml
cxx/2020/1.1/: 1.1.cxx
cxx/2020/2.1/: 2.1.cxx
cxx/2020/3.1/: 3.1.cpp
cxx/2020/4.1/: main.cxx
cxx/2021/13.1/: main.cpp
cxx/2021/13.2/: main.cxx
cxx/2021/16.1/: main.cpp
cxx/2021/22.1/: main.cxx
cxx/2021/24.1/: main.cxx
cxx/2021/24.2/: main.cxx
cxx/2021/3.2/: main.cpp
cxx/2021/6.2/: main.cxx
cxx/2021/8.1/: main.cxx
cxx/2021/8.2/: main.cxx
cxx/2022/: CMakeLists.txt
cxx/2022/1.1/: input.txt  main.cxx
cxx/2022/1.2/: main.cpp  main.cxx
cxx/2022/10.1/: diagnostic.txt  diagnostic_2.txt  input.txt  main.cpp  main.cxx
cxx/2022/10.2/: main.cxx
cxx/2022/11.1/: diagnostic.txt  main.cxx
cxx/2022/11.2/: input.txt  main.cxx
cxx/2022/12.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/12.2/: main.cxx
cxx/2022/13.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/13.2/: main.cxx
cxx/2022/14.1/: input.txt  main.cxx
cxx/2022/14.2/: diagnostic.txt  main.cxx
cxx/2022/15.1/: diagnostic.txt  input.txt
cxx/2022/15.2/: diagnostic1.txt  main.cxx
cxx/2022/16.1/: main.cxx
cxx/2022/16.2/: diagnostic.txt  input.txt  main.cxx
cxx/2022/17.1/: main.cxx
cxx/2022/17.2/: diagnostic.txt  input.txt  main.cxx
cxx/2022/18.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/18.2/: main.cxx
cxx/2022/2.1/: input.txt  main.cpp  main.cxx
cxx/2022/2.2/: main.cxx
cxx/2022/20.1/: main.cxx
cxx/2022/20.2/: diagnostic.txt  input.txt  main.cxx
cxx/2022/21.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/21.2/: main.cxx
cxx/2022/22.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/23.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/23.2/: diagnostic1.txt  main.cxx
cxx/2022/24.1/: diagnostic1.txt  input.txt  main.cxx
cxx/2022/24.2/: diagnostic.txt  main.cxx
cxx/2022/25.1/: diagnostic.txt  input.txt  main.cxx
cxx/2022/3.1/: main.cpp  main.cxx
cxx/2022/3.2/: diagnostic.txt  input.txt  main.cpp  main.cxx
cxx/2022/4.1/: input.txt  main.cxx
cxx/2022/4.2/: diagnostic.txt  input.txt  main.cxx
cxx/2022/5.1/: main.cpp  main.cxx
cxx/2022/5.2/: diagnostic.txt  input.txt  main.cpp  main.cxx
cxx/2022/6.1/: input.txt  main.cpp  main.cxx
cxx/2022/6.2/: diagnostic.txt  main.cpp  main.cxx
cxx/2022/7.1/: input.txt  main.cxx
cxx/2022/7.2/: diagnostic.txt  main.cxx
cxx/2022/8.1/: main.cxx
cxx/2022/8.2/: diagnostic.txt  input.txt  main.cxx
cxx/2022/9.1/: main.cpp  main.cxx
cxx/2022/9.2/: diagnostic.txt  diagnostic_large.txt  input.txt  main.cxx
cxx/2023/: CMakeLists.txt
cxx/2023/1.1/: diagnostic.txt  main.cxx
cxx/2023/1.2/: diagnostic.txt  input.txt  main.cxx
cxx/2023/2.1/: diagnostic.txt  main.cxx
cxx/2023/2.2/: diagnostic.txt  input.txt  main.cxx
cxx/2023/3.1/: diagnostic.txt  input.txt  main.cxx
cxx/2023/3.2/: main.cxx
cxx/2023/4.1/: main.cxx
cxx/2023/4.2/: diagnostic.txt  input.txt  main.cxx
ocaml/2020/q10_2/: q10_2.ml
ocaml/2020/q1_2/: dune
(+21 files in other folders)
